@@ -22,7 +22,15 @@ function [acc, indices, classes] = partitioned(train, test, varargin)
 %   instance.
 %
 %   Options:
-%       runs::model     (default: @models.nn)
+%       runs::model     (default: *)
+%
+%   *the default value for "runs::model" is "@models::nn" if a distance
+%   function is specified as  third argument; "@models::nn1euclidean"
+%   otherwise. Notice that @models::nn1euclidean, although much faster,
+%   requires input values to be of type DOUBLE, so if the input might
+%   contain complex numbers, either a distance function must be specified
+%   or the classification model must be explicitly specified.
+defaultmodel = @models.nn1euclidean;
 tb.narginchk(nargin, 2, 4);
 if nargin <= 2
     options = opts.empty;
@@ -31,6 +39,9 @@ elseif nargin == 3
         options = varargin{1};
     else
         options = opts.empty;
+        % Since the third argument was not an OPTS object, we assume it is
+        % a handle to a distance function
+        defaultmodel = @models.nn;
     end
 else
     tb.assert(~opts.isa(varargin{1}), ['RUNS.PARTITIONED: when called with 4 arguments, the third argument must be ' ...
@@ -38,9 +49,11 @@ else
     tb.assert(opts.isa(varargin{2}), ['RUNS.PARTITIONED: when called with 4 arguments, the fourth argument must be ' ...
         'an options object -- use OPTS.EMPTY if the associated function takes no options']);
     options = varargin{2};
+
+    defaultmodel = @models.nn;    
 end
 
-modelfun = opts.get(options, 'runs::model', @models.nn);
+modelfun = opts.get(options, 'runs::model', defaultmodel);
 
 numtestinstances = size(test, 1);
 classes = zeros(numtestinstances, 1);
